fixed visibility, removed [visible] from toggling [hidden], removed display:initial,

--- a/src/css/core-util.less
+++ b/src/css/core-util.less
@@ -59,7 +59,8 @@
 	visibility: hidden;
 });
 .responsive-screensize(visible, {
-	display: initial;
+	// WARNING: having 'initial' on custom element makes it inline
+	//display: initial;
 	visibility: visible;
 });
 
